# even-flow-pearl-jam.mp3

./: .gitignore  01_neural_ode_2d.ipynb  02_cnf_trace_computation.ipynb  Dockerfile  README.md  cli.py  dask_slurm_test.py  divergences_with_torch.py  docker-compose.yaml  extract_docs.py  main.py  pyproject.toml  run_all.py  run_mnist.py  run_moons.py  submitit_test.py  torch_diffs_101.ipynb  torchdiffeq_example.py
even_flow/: callbacks.py  jobs.py  lightning.py  metrics.py  mlflow.py  plotting.py  pydantic.py  torch.py  utils.py
even_flow/datasets/: moons.py  spiral.py
even_flow/mnist/: cli.py  dataset.py  jobs.py
even_flow/models/: __init__.py  cnf.py  lightning.py  mlp.py  neuralode.py  real_nvp.py  torch.py  vector_field.py
even_flow/moons/: cli.py  dataset.py  jobs.py  models.py
even_flow/neuralode/: __init__.py  jobs.py  models.py
even_flow/spirals/: dataset.py  jobs.py
experiment1/: logs
scripts/: singularity_img_pull.sh
tests/: conftest.py  test_cnf.py  test_mnist.py  test_moons.py  test_neuralode.py
tests/data/: test_mlp_spiral_fit.yaml  test_time_embedding_mlp_neural_ode.yaml  test_time_embedding_neural_ode.yaml
tests/data/test_mnist/: test_zuko_cnf.yaml
tests/data/test_moons/: test_real_nvp.yaml  test_time_embedding_mlp_cnf.yaml  test_time_embedding_mlp_cnf_hutchingson.yaml  test_time_embedding_mlp_cnf_torch.yaml  test_time_embedding_mlp_neural_ode.yaml  test_zuko_cnf.yaml
tests/test_models/: test_cnf.py
