[project]
name = "even-flow-pearl-jam-mp3"
version = "0.1.0"
description = "A repository with training and evaluation pipelines for flow-based generative models as Continuous Normalizing Flows, Diffusion and Flow Matching models."
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "mlflow==3.6.0",
    "torch==2.9.1",
    "torchdiffeq==0.2.5",
]
