[project]
name = "even-flow-pearl-jam-mp3"
version = "0.1.0"
description = "A repository with training and evaluation pipelines for flow-based generative models as Continuous Normalizing Flows, Diffusion and Flow Matching models."
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "jupyterlab==4.4.10",
    "lightning==2.5.6",
    "matplotlib==3.10.7",
    "mlflow==3.6.0",
    "mplhep==0.4.1",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "torch==2.9.1",
    "torchdiffeq==0.2.5",
    "torchmetrics==1.8.2",
    "typer==0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-env>=1.2.0",
]
