[project]
name = "even-flow-pearl-jam-mp3"
version = "0.1.0"
description = "A repository with training and evaluation pipelines for flow-based generative models as Continuous Normalizing Flows, Diffusion and Flow Matching models."
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "jupyterlab==4.4.10",
    "lightning==2.5.6",
    "matplotlib==3.10.7",
    "mlflow==3.6.0",
    "mplhep==0.4.1",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "torch==2.9.1",
    "torchdiffeq==0.2.5",
    "torchmetrics==1.8.2",
    "torchvision>=0.24.1",
    "typer==0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-env>=1.2.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)s | %(name)s | %(module)s | %(funcName)s | %(lineno)s | %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
pythonpath = "."
